--- a/MovieRentalApp/Views/Shared/_Layout.cshtml
+++ b/MovieRentalApp/Views/Shared/_Layout.cshtml
@@ -20,12 +20,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="MovieDashboard">Movies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Wishlist</a>
                         </li>
                     </ul>
+                </div>
+                <div class="text-end">
+                    <a asp-area="" asp-controller="UsersLogin" asp-action="Index" style="color: inherit;text-decoration: none;margin-right:8px;">Login</a>
+                    <a asp-area="" asp-controller="UsersLogin" asp-action="Index" style="color: inherit;text-decoration: none;">Register</a>
                 </div>
             </div>
         </nav>
