--- a/MovieRentalApp/Views/_ViewImports.cshtml
+++ b/MovieRentalApp/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using MovieRentalApp
 @using MovieRentalApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-    
+@using System.Security.Claims
